--- a/09-05_header.html
+++ b/09-05_header.html
@@ -20,8 +20,7 @@
 				<li><a href="password.php" title="Change Your Password">Chage Password</a></li>
 				<li><?php
 					// Create a login/logout link.
-					//if ( (isset($_COOKIE['user_id'])) && (!strpos($_SERVER['PHP_SELF'], 'logout.php')) ) {
-					if ( (isset($_SESSION['user_id'])) && (!strpos($_SERVER['PHP_SELF'], 'logout.php')) ) {
+					if ( (isset($_COOKIE['user_id'])) && (!strpos($_SERVER['PHP_SELF'], 'logout.php')) ) {
 						echo '<a href="logout.php" title="Logout">Logout</a>';
 					} else {
 						echo '<a href="login.php" title="Login">Login</a>';
